apache-tika/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
  name: apache-tika
  namespace: default
spec:
  tls:
    - hosts:
      - tika.inovio.co
      secretName: tika-inovio-tls
  rules:
  - host: tika.inovio.co
    http:
      paths:
      - backend:
          serviceName: release-name-tika-server
          servicePort: 9998
        path: /
